Use templates and config in Arduino staging
The new staging disables the paused start by default.

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -68,7 +68,7 @@ jobs:
                         - name: esp32:esp32
                           source-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
                       sketches: |
-                        - platforms/Arduino
+                        - tests/compilation/esp32/esp32.ino
         steps:
             - name: Checkout
               uses: actions/checkout@v3
