Remove deprecated built-in spectests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,42 +1,32 @@
-name: WASM Spectests
-on: [push, pull_request]
+name: Tests
+on: [ push, pull_request ]
 
 concurrency:
-    group: ${{ github.workflow }}-${{ github.ref }}
-    cancel-in-progress: true  # Cancel in-flight jobs for the same branch or PR
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true  # Cancel in-flight jobs for the same branch or PR
 
 jobs:
-    test:
-        name: Run official testsuite
-        runs-on: ubuntu-latest
-        if: github.event.pull_request.draft == false
-        steps:
-            - uses: actions/checkout@v3
-              with:
-                submodules: recursive
+  unit:
+    name: Run VM unit tests
+    runs-on: ${{matrix.os}}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, macos-latest ]
+    if: github.event.pull_request.draft == false
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
-            - uses: actions/setup-python@v4
-              with:
-                python-version: "3.x"
+      - name: Create build folder
+        run: mkdir build-unit-tests
 
-            - name: Build warduino cli
-              run: cmake . -D BUILD_EMULATOR=ON ; cmake --build .
+      - name: Build unit tests
+        run: cmake .. -D BUILD_UNITTEST=ON ; cmake --build .
+        working-directory: build-unit-tests
 
-            - name: Build WABT  # Build latest version
-              run: |
-                git clone --recursive https://github.com/WebAssembly/wabt
-                cd wabt
-                git submodule update --init
-                mkdir build; cd build
-                cmake ..
-                cmake --build .
-
-            - name: Verify wat2wasm
-              run: ./wabt/build/wat2wasm --version
-
-            - name: Install Python dependencies
-              run: pip install -r requirements.txt
-
-            - name: Clone and run tests
-              run: ./tests/integration/run_spec_tests.py --compiler "./wabt/build/wat2wasm" --interpreter "./wdcli" --ignore "./tests/integration/ignore.txt"
+      - name: Run unit tests
+        run: ctest -VV
+        working-directory: build-unit-tests
 
