Group all elements of symbolic state
Also only include these elements if we are compiling for the emulator.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ if (BUILD_EMULATOR)
     add_definitions(-DDEBUG=0)
     add_definitions(-DTRACE=0)
     add_definitions(-DWARN=0)
+    add_definitions(-DEMULATOR=1)
 
     # Set default compile flags for GCC
     if (CMAKE_COMPILER_IS_GNUCXX)
