Attempt at getting the colour sensor to work (doesn't fully work yet)
Partially works, sensor lights up with a red light but then resets itself so
we fail to probably communicate the NACK messages?

--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -17,6 +17,11 @@ CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_UART_LINE_CTRL=y
 
+CONFIG_UART_INTERRUPT_DRIVEN=n
+CONFIG_UART_ASYNC_API=n
+CONFIG_UART_WIDE_DATA=y
+CONFIG_UART_USE_RUNTIME_CONFIGURE=y
+
 CONFIG_CONSOLE_SUBSYS=y
 CONFIG_CONSOLE_GETLINE=y
 CONFIG_CONSOLE_GETCHAR=y
