--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ if (BUILD_UNITTEST)
             src/Primitives/emulated.cpp
             src/Interpreter/instructions.cpp
             src/Interpreter/interpreter.cpp
+            src/Interpreter/proxied.cpp
             src/Memory/mem.cpp
             src/Utils/util.cpp
             src/Utils/util_arduino.cpp
