--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,8 @@ if (BUILD_EMULATOR)
             src/Debug/debugger.cpp
             src/Edward/proxy.cpp
             src/Edward/proxy_supervisor.cpp
-            src/Edward/RFC.cpp)
+            src/Edward/RFC.cpp
+            src/Threading/warduino-thread.cpp)
 
     add_definitions(-DINFO=0)
     add_definitions(-DDEBUG=0)
@@ -92,7 +93,8 @@ if (BUILD_UNITTEST)
             src/Debug/debugger.cpp
             src/Edward/proxy.cpp
             src/Edward/proxy_supervisor.cpp
-            src/Edward/RFC.cpp)
+            src/Edward/RFC.cpp
+            src/Threading/warduino-thread.cpp)
 
     # Set default compile flags for GCC
     if (CMAKE_COMPILER_IS_GNUCXX)
