--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -4,6 +4,7 @@ CONFIG_CPP=y
 CONFIG_STD_CPP17=y
 CONFIG_REQUIRES_FULL_LIBCPP=y
 CONFIG_GLIBCXX_LIBCPP=y
+CONFIG_CPP_EXCEPTIONS=y
 
 CONFIG_REQUIRES_FLOAT_PRINTF=y
 
@@ -17,8 +18,15 @@ CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_UART_LINE_CTRL=y
 
+CONFIG_UART_INTERRUPT_DRIVEN=n
+CONFIG_UART_ASYNC_API=n
+CONFIG_UART_WIDE_DATA=y
+CONFIG_UART_USE_RUNTIME_CONFIGURE=y
+
 CONFIG_CONSOLE_SUBSYS=y
 CONFIG_CONSOLE_GETCHAR=y
-CONFIG_CONSOLE_GETCHAR_BUFSIZE=8192
+CONFIG_CONSOLE_GETCHAR_BUFSIZE=4096
+CONFIG_CONSOLE_PUTCHAR_BUFSIZE=4096
 
 CONFIG_POSIX_API=y
+CONFIG_MAIN_STACK_SIZE=4096
