Port WARDuino to the Zephyr RTOS (#241)
* Port WARDuino to the Zephyr RTOS

The main reason for this is to support boards such as Open Bot Brain which uses
an stm32l496zg. By porting to Zephyr we can also add support for some other
boards with relative ease.

* Try correcting for drift in the servo motor driver

* Fixed cmake with branch rebase

* Use vfprintf instead of fprintf to handle variadic arguments

* Loading snapshots should work again now

* Attempt at making threading code work with multiple platforms

* Run clang format

* Attempt at fixing ESP-IDF and Arduino builds

* Fixed warduino::condition_variable zephyr implementation

* Add warduino::thread zephyr implementation

This should now make all features including out-of-place debugging work.

* Cleanup + clang-format

* Remove motor primitives for the minimal zephyr port

These will be added in a later PR.

* Clean up board overlays

* Remove leftover blink.wat from src folder

* typedef std::condition_variable just like the other implementations

This allows getting rid of the separate threading cpp files and makes things much cleaner.

* Remove some unnecessary print statements

* Clang-format

* Remove some unnecessary things that came from the original Zephyr blinky sample

* Uncomment some code

* Remove unused include from proxy_supervisor.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,8 @@ if (BUILD_EMULATOR)
             src/Debug/debugger.cpp
             src/Edward/proxy.cpp
             src/Edward/proxy_supervisor.cpp
-            src/Edward/RFC.cpp)
+            src/Edward/RFC.cpp
+    )
 
     add_definitions(-DINFO=0)
     add_definitions(-DDEBUG=0)
@@ -94,7 +95,8 @@ if (BUILD_UNITTEST)
             src/Debug/debugger.cpp
             src/Edward/proxy.cpp
             src/Edward/proxy_supervisor.cpp
-            src/Edward/RFC.cpp)
+            src/Edward/RFC.cpp
+    )
 
     # Set default compile flags for GCC
     if (CMAKE_COMPILER_IS_GNUCXX)
