Enable SPI in zephyr build

--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -23,6 +23,8 @@ CONFIG_UART_ASYNC_API=n
 CONFIG_UART_WIDE_DATA=y
 CONFIG_UART_USE_RUNTIME_CONFIGURE=y
 
+CONFIG_SPI=y
+
 CONFIG_CONSOLE_SUBSYS=y
 CONFIG_CONSOLE_GETCHAR=y
 CONFIG_CONSOLE_GETCHAR_BUFSIZE=4096
