--- a/platforms/Zephyr/CMakeLists.txt
+++ b/platforms/Zephyr/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(warduino)
 
+# Note on _POSIX_C_SOURCE: If you define this macro to a value greater than or equal to 200809L, then the functionality from the 2008 edition of the POSIX standard (IEEE Standard 1003.1-2008) is made available.
+target_compile_definitions(app PRIVATE _POSIX_C_SOURCE=200809L)
+
 add_custom_command(
     OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/upload.h
     COMMAND xxd -i upload.wasm > upload.h
