--- a/benchmarks/rebench.conf
+++ b/benchmarks/rebench.conf
@@ -29,7 +29,7 @@ executors:
         path: .
         executable: warduino_bench.sh
         env:
-            PATH: /snap/bin/:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+            PATH: /snap/bin/:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/linuxbrew/.linuxbrew/bin/:../lib/wabt/build/
         args: " %(benchmark)s"
         build:
             - cd tasks; make
