🚑 Fix benchmark compilation (#259)
* Add missing file to benchmark makefile

* Fix makefile for clang

* Fix compiler flags in makefile

---------

Co-authored-by: Christophe <Christophe.Scholliers@UGent.be>

--- a/benchmarks/makefile
+++ b/benchmarks/makefile
@@ -14,8 +14,8 @@ DEBUGFLAGS = -DDEBUG=$(DEBUG) -DTRACE=$(TRACE) -DINFO=$(INFO) -DWARN=$(WARN)
 
 CXX       = g++
 CC        = gcc
-CFLAGS    = -g -Wall -c
-CXXFLAGS  = -g -v -std=c++11 -I ../lib/json/single_include -Wall
+CFLAGS    = -Wall -c -O3
+CXXFLAGS  = -v -O3 -std=c++11 -I ../lib/json/single_include -Wall
 
 
 
@@ -35,11 +35,11 @@ CXXSOURCES = \
            ../src/WARDuino/CallbackHandler.cpp \
            ../src/Primitives/emulated.cpp \
            ../src/Interpreter/instructions.cpp \
+	   ../src/Interpreter/interpreter.cpp \
            ../src/Edward/RFC.cpp \
            ../src/Edward/proxy.cpp \
            ../src/Edward/proxy_supervisor.cpp \
            ../src/Utils/sockets.cpp \
-	   ../lib/json/single_include/nlohmann/json.hpp \
 	benchmarks.cpp
 
 all: $(OUTPUTDIR)$(TARGET) $(addprefix tasks/,$(addsuffix /wast/impl.wasm, $(TASKS)))
